Simplify apt-get installation in install phase in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,7 @@ env:
 
 install:
 - sudo apt-get update -q
-- sudo apt-get install xsltproc
-- sudo apt-get install libxml-xpath-perl
-- sudo apt-get install libsaxon-java libxml-commons-resolver1.1-java libsaxon-java
-  libxerces2-java
-- sudo apt-get install trang
-- sudo apt-get install imagemagick
-- sudo apt-get install dblatex
-- sudo apt-get install libxml2-utils
+- sudo apt-get install --yes xsltproc libxml-xpath-perl libsaxon-java libxml-commons-resolver1.1-java libsaxon-java libxerces2-java trang imagemagick dblatex libxml2-utils
 - cp .travis/xmlc ~/.xmlc
 
 script:
